--- a/style.css
+++ b/style.css
@@ -1,5 +1,33 @@
 body {
+  text-align: center;
   width: 100%;
   height: 100%;
   margin: 0;
+}
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: beige;
+  text-align: center
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
+figcaption {
+    text-align: center;
+    font-size: smaller;  
+  }
+#featured-property {
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+}
+
+div {
+  float: left;
+  background: red;
+  text-align: center;
+  width: 25%;
 }
